# dappmesh

./: .env  .gitignore  .pre-commit-config.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.ci.toml  Makefile.development.toml  Makefile.docker.toml  Makefile.k8s.toml  Makefile.local.toml  Makefile.release.toml  Makefile.toml  README.md  cackle.toml  deny.toml  development.env  devspace.yaml  release.env
.cargo/: config.toml
.config/mise/: config.local.toml  local.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeowners  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-feature.yaml  2-bug.yaml  feature.yaml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/.config/: config.json5
crates/cli/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  logging.rs  main.rs  tui.rs
crates/cli/src/actions/: mod.rs
crates/cli/src/command/: helm.rs  mod.rs
crates/cli/src/components/: fps.rs  home.rs
crates/cli/src/main/: clap.rs  main.rs
crates/cli/src/store/: app.rs  main.rs  mod.rs  plugin.rs
crates/cli/src/view/: mod.rs  tutorial.rs
crates/core/: Cargo.toml
crates/core/resources/storage/surrealdb/: service-account.yaml
crates/core/src/k8s/: mod.rs  operator.rs
crates/core/src/k8s/storage/surrealdb/: app.rs
crates/domain-operator/: Cargo.toml
crates/domain-operator/src/: crd.rs  lib.rs  main.rs  operator.rs
crates/domain-operator/src/tests/: reconcile.rs
crates/domain-operator/tests/: mod.rs  reconcile.rs
crates/mesh-operator/: Cargo.toml
crates/mesh-operator/src/: crd.rs  lib.rs  main.rs  operator.rs
crates/mesh-operator/src/tests/: reconcile.rs
crates/mesh-operator/tests/: reconcile.rs
crates/platform/: Cargo.toml
crates/platform/resources/storage/surrealdb/: pvc.yaml  service-account.yaml  service.yaml  statefulset.yaml
crates/platform/src/: lib.rs
crates/platform/src/core/: deployment.rs  labels.rs  metadata.rs  mod.rs  service.rs  service_account.rs  statefulset.rs
crates/platform/src/k8s/: mod.rs
crates/platform/src/k8s/core/: mod.rs  operator.rs  resource.rs
crates/platform/src/k8s/storage/surrealdb/: app.rs  config.rs
crates/platform/src/surrealdb/: app.rs  config.rs  mod.rs  service.rs  service_account.rs  statefulset.rs
crates/product-operator/: Cargo.toml
crates/product-operator/src/: crd.rs  main.rs  operator.rs
crates/product-operator/src/tests/: reconcile.rs
crates/product-operator/tests/: reconcile.rs
docker/ci/: Dockerfile
docker/development/: Dockerfile
docker/development/scripts/: rustup.sh
docker/local/: Dockerfile
docker/local/scripts/: rustup.sh
docker/release/: Dockerfile
docs/: roadmap.md
docs/architecture/: application-model.md  data-product.md  operator-mesh.md
docs/env/: windows.md
docs/feature/: application-model.md  architecture.md  data-contract.md  data-product.md  stack.md
docs/project/: domain-operator.md  mesh-operator.md  platform.md  product-operator.md
docs/section/: questions.md  resources.md  stack.md
docs/setup/: linux.md  macos.md
manifests/app/: devspace.yaml
manifests/app/domain/: sales.yaml
manifests/app/mesh/: controller.yaml
manifests/app/product/: sales-order.yaml
manifests/core/: devspace.yaml
manifests/core/operator/product/: devspace.yaml
manifests/infra/: devspace.yaml
manifests/infra/cert-manager/helm/cert/: values.yaml
manifests/infra/cert-manager/helm/trust/: values.yaml
manifests/infra/cert-manager/resources/: bundle.yaml  certificate.yaml  issuer.yaml
manifests/infra/registry/helm/: values.yaml
manifests/infra/registry/resources/: certificate.yaml  ingress.yaml  transport.yaml
manifests/infra/scripts/: wait-trust-manager-endpoint.sh
manifests/infra/traefik/helm/: values.yaml
manifests/infra/traefik/resources/: certificate.yaml  ingress.yaml  middleware.yaml
manifests/platform/: devspace.yaml
manifests/platform/base/: namespace.yaml
manifests/platform/crd/: mesh.yaml
manifests/platform/crds/: domain.yaml  mesh.yaml  product.yaml
manifests/platform/operator/: domain.yaml  mesh.yaml  product.yaml
manifests/platform/operator/domain/: devspace.yaml
manifests/platform/operator/mesh/: devspace.yaml
manifests/platform/operator/product/: devspace.yaml
manifests/platform/operators/: product.yaml
manifests/platform/secret/: docker-registry.yaml  docker-secret.sh
manifests/scripts/: entrypoint.sh
supply-chain/: README.md  audits.toml  config.toml
