[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/domain-operator",
    "crates/mesh-operator",
    "crates/platform",
    "crates/product-operator"
]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["DappMesh Developers <developers@dappmesh.io>"]
readme = "./README.md"
homepage = "https://dappmesh.io/"
repository = "https://github.com/dappmesh/dappmesh"
license = "BSL-1.0"

[workspace.dependencies]
dapp-platform = { path = "crates/platform", version = "0.1.0" }
anyhow = "1.0.80"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
chrono = "0.4.34"
color-eyre = "0.6.3"
config = "0.14.1"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
hyper = "1.2.0"
k8s-openapi = { version = "0.23.0", default-features = false, features = ["v1_31"] }
kube = { version = "0.97.0", features = ["derive", "runtime"] }
kube-core = "0.97.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
ratatui = "0.29.0"
regex = "1.10.0"
schemars = "0.8.16"
serde = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.32"
signal-hook = "0.3.17"
strum = "0.26.3"
thiserror = "2.0.3"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.12"
tower-test = "0.4.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.bench]
strip = false
