[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/product-operator"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"
authors = ["DappMesh Developers <developers@dappmesh.io>"]
readme = "./README.md"
homepage = "https://dappmesh.io/"
repository = "https://github.com/dappmesh/dappmesh"
license = "BSL-1.0"

[workspace.dependencies]
dapp-core = { path = "crates/core", version = "0.1.0" }
anyhow = "1.0.97"
chrono = "0.4.40"
futures = "0.3.31"
hyper = "1.6.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = ["v1_31"] }
kube = { version = "0.99.0", features = ["derive", "runtime"] }
kube-core = "0.99.0"
regex = "1.11.1"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tower-test = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.bench]
strip = false
