[package]
name = "dapp-mesh-operator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dapp-platform = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-derive = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert-json-diff = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
tower-test = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
semver = { workspace = true }